# nict-badge-wallet-sys

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  alembic.ini  code_examples.ipynb  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 664ae0905bb7_sync_transit_api_schema_for_v0_3_0.py  9624f3823ec4_baseline_api_schema.py  a1b2c3d4e5f6_add_instance_based_constraints.py  b6f3e4c9d8a1_stage3_full_semantic_rename.py  c9e12a7d4b20_add_raw_tx_data_to_nft_instances.py  fb03c2018550_sync_transit_api_schema_post_20260203.py
alembic/versions_legacy/: a287a719a914_initial_schema.py
app/db/: engine.py  metadata.py
app/models/: __init__.py  admin.py  audit.py  bingo.py  chain.py  nft.py  ownership.py  user.py
docs/: code_examples.ipynb  migration_v1.md  rollout_v1_1_0_no_tag.md  schema_followup_memo.md  schema_followup_plan.md  workflows.md
docs/archive/: migration_v1.md  rollout_v1_1_0_no_tag.md  schema_followup_memo.md  schema_followup_plan.md
nictbw/: workflows.py
nictbw/blockchain/: api.py  utils.py
nictbw/db/: engine.py  metadata.py  utils.py
nictbw/models/: __init__.py  admin.py  audit.py  base.py  bingo.py  chain.py  coupon.py  id_type.py  misc.py  nft.py  ownership.py  prize_draw.py  user.py  utils.py
scripts/: check_schema_drift.py  dedup_unique_nft_id.py  init_db.py  seed_dev.py  validate_pre_migration.py
tests/: test_blockchain_api.py  test_blockchain_utils.py  test_db_utils.py  test_models.py  test_prize_draw_helpers.py  test_prize_draw_workflow.py  test_serialization.py  test_workflows.py
(+4 files in other folders)
