[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nict-bw"
version = "0.4.0"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "alembic>=1.13",
    "psycopg[binary]>=3.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nictbw*"]
